--- a/src/app.css
+++ b/src/app.css
@@ -2,11 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Default'; /* nome del font */
+  src: url('../Fonts/PPPierSans/PPPierSans-Regular.otf') format('opentype'); /* Percorso al file OTF */
+}
 
+
+:root {
+
+/* Sfondo principale */
+--Background: #0e0e0e;
+
+/* Colori principali */
+--Primary: rgba(46, 46, 46); 
+--PrimaryOpacity80: rgba(46, 46, 46, 0.8); 
+--PrimaryOpacity60: rgba(46, 46, 46, 0.6);
+--PrimaryOpacity40: rgba(46, 46, 46, 0.4);
+
+--PrimaryLight: rgb(34, 34, 34); 
+--PrimaryDark: rgb(29, 29, 29); 
+
+--Secondary: rgb(0, 255, 200);
+
+/* Text */
+--TextPrimary: #ffffff; 
+--TextSecondary: #666666; 
+
+--Border: var(--Secondary); 
+
+/* Gradienti */
+--Gradient: linear-gradient(to bottom, var(--Primary), #faa1b7);
+
+/* Sizes */
+--FontS: 16px;
+--FontM: 19px;
+--FontL: 25px;
+--FontXL: 33px;
+}
 
 body {
-  font-family: Gordita, Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #1b1b1b;
+  font-family: 'Default','Times New Roman', Times, serif; /* Font di default */
+  background-color: var(--Background);
 }
 
 a {
@@ -20,18 +56,27 @@ main {
 }
 
 h1 {
-  color: #335d92;
-  text-transform: uppercase;
-  font-size: 4rem;
-  font-weight: 100;
-  line-height: 1.1;
-  margin: 4rem auto;
-  max-width: 14rem;
+  color: var(--TextPrimary);
+  font-size: var(--FontXL);
+  margin: 3rem auto;
+}
+
+h2{
+  color: var(--TextPrimary);
+  font-size: var(--FontL);
+  margin: 2rem auto;
+}
+
+h3{
+  color: var(--TextPrimary);
+  font-size: var(--FontM);
+  margin: 1.5rem auto;
 }
 
 p {
-  max-width: 14rem;
-  margin: 2rem auto;
+  color: var(--TextPrimary);
+  font-size: var(--FontS);
+  margin: 1rem auto;
   line-height: 1.35;
 }
 
