--- a/src/Style/Components.scss
+++ b/src/Style/Components.scss
@@ -1,6 +1,10 @@
 @use './Var.scss' as *;
 
 .Title{
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%); /* posiziona al centro anche con scritte piu lunghe*/
     font-size: var(--FontXL);
     color: var(--TextPrimary);
 }
