--- a/src/components/Menus/Menu.scss
+++ b/src/components/Menus/Menu.scss
@@ -33,6 +33,7 @@
     transform: scale(1);
   }
 }
+
 @keyframes blur-motion {
   0% {
     filter: blur(0px);
@@ -48,14 +49,6 @@
   }
 }
 
-@keyframes shimmer-animation {
-    0% {
-        left: -100%; /* Inizia a sinistra */
-    }
-    100% {
-        left: 100%; /* Si sposta a destra */
-    }
-}
 .Menu {
   width: 70px;
   height: 100vh;
@@ -93,38 +86,11 @@
   font-size: var(--FontM);
 }
 .Text.Hover {
-color: #00ffc8;
+color: var(--Secondary);
 }
 
 .Text.Blur {
-  filter: blur(2px);
+  filter: blur(1px);
+ opacity: 0.5;
   transition: all 0.4s ;
-}
-
-.shimmer {
-    font-size: 48px; /* Dimensione del testo */
-    font-weight: bold;
-    color: #fff; /* Colore del testo */
-    position: relative;
-    overflow: hidden; /* Nasconde la parte dell'animazione che esce dal contenitore */
-}
-
-.shimmer::before {
-    content: 'text';
-    position: absolute;
-    top: 0;
-    left: -100%; /* Inizia fuori dal contenitore a sinistra */
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
-    animation: shimmer-animation 2s infinite; /* Durata e ripetizione dell'animazione */
-}
-
-@keyframes shimmer-animation {
-    0% {
-        left: -100%; /* Inizia a sinistra */
-    }
-    100% {
-        left: 100%; /* Si sposta a destra */
-    }
 }
