--- a/src/Style/Components.scss
+++ b/src/Style/Components.scss
@@ -8,3 +8,17 @@
     font-size: var(--FontXL);
     color: var(--TextPrimary);
 }
+
+.Button{
+    background-color: var(--Primary);
+    color: var(--TextPrimary);
+    border: none;
+    padding: 10px 20px;
+    font-size: var(--FontM);
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s;
+    &:hover{
+        background-color: var(--PrimaryDark);
+    }
+}
