--- a/src/components/Menus/Menu.scss
+++ b/src/components/Menus/Menu.scss
@@ -66,7 +66,7 @@
 }
 
 .Icon {
-  width: 30px !important;
+  width: 35px !important;
   color: rgb(255, 255, 255) !important;
 
   transform-style: preserve-3d;
@@ -83,7 +83,7 @@
 
 .Text {
     padding: 5px;
-  font-size: var(--FontM);
+  font-size: 16px;
 }
 .Text.Hover {
 color: var(--Secondary);
