--- a/src/components/Menus/Menu.scss
+++ b/src/components/Menus/Menu.scss
@@ -1,4 +1,4 @@
-@keyframes pulse {
+@keyframes pulseIcon {
   0% {
     transform: scale(1);
   }
@@ -75,8 +75,9 @@
 
 .Icon.Hover {
   color: #00ffc8 !important;
+  width: 35px !important;
   transition: all 0.3s ease;
-  animation: pulse 1.2s infinite;
+  animation: pulseIcon 1.2s infinite;
   filter: drop-shadow(0 0 5px var(--Secondary));
   transition: filter 0.3s;
 }
