--- a/src/components/Buttons/AnimatedIconButton/Button.css
+++ b/src/components/Buttons/AnimatedIconButton/Button.css
@@ -1,225 +1,240 @@
-
 :root {
-    --transition: 0.25s;
-    --spark: 1.8s;
-  }
-  
-  .sparkle-button {
-    position: relative;
-  }
-  
-  .button {
-    --cut: 0.1em;
-    --active: 0;
-    --bg:
-      radial-gradient(
-        40% 50% at center 100%,
-        hsl(270 calc(var(--active) * 97%) 72% / var(--active)),
-        transparent
-      ),
-      radial-gradient(
-        80% 100% at center 120%,
-        hsl(260 calc(var(--active) * 97%) 70% / var(--active)),
-        transparent
-      ),
-      hsl(260 calc(var(--active) * 97%) calc((var(--active) * 44%) + 12%));
-    background: var(--bg);
-    font-size: 2rem;
-    font-weight: 500;
-    border: 0;
-    cursor: pointer;
-    padding: 0.9em 1.3em;
-    display: flex;
-    align-items: center;
-    gap: 0.25em;
-    white-space: nowrap;
-    border-radius: 100px;
-    position: relative;
-    box-shadow:
-      0 0 calc(var(--active) * 6em) calc(var(--active) * 3em) var(--Secondary),
-      0 0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc((var(--active) * 50%) + 30%)) inset,
-      0 -0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc(var(--active) * 60%)) inset;
-    transition: box-shadow var(--transition), scale var(--transition), background var(--transition);
-    scale: calc(1 + (var(--active) * 0.1));
-  }
-  
-  button:active {
-    scale: 1;
-  }
-  
-  svg {
-    overflow: visible !important;
-  }
-  
-  .sparkle path {
-    color: hsl(0 0% calc((var(--active, 0) * 70%) + var(--base, 30%)));
-    transform-box: fill-box;
-    transform-origin: center;
-    fill: currentColor;
-    stroke: currentColor;
-    animation-delay: calc((var(--transition) * 1.5) + (var(--delay, 0.1) * 1s));
-    animation-duration: 0.6s;
-    transition: color var(--transition);
-  }
-  .sparkle:hover path {
-    color: var(--Secondary);
+  --transition: 0.25s;
+  --spark: 1.8s;
+  --primary-color: hsl(260, 97%, 70%);
+  --secondary-color: hsl(270, 97%, 72%);
+  --button-bg-primary: hsl(270, 97%, 72%);    /* Colore primario del gradiente */
+--button-bg-secondary: hsl(170, 97%, 70%);  /* Colore secondario del gradiente */
+--button-bg-base: hsl(260, 97%, 12%);       /* Colore di sfondo base */
+--shadow-color: rgba(0, 255, 234, 0.877);     /* Colore dell'ombra */
+--shadow-size: 40px;          
+}
 
+.sparkle-button {
+  position: relative;
+}
+
+button {
+  --cut: 0.1em;
+  --active: 0;
+  --bg:
+    radial-gradient(
+      40% 50% at center 100%,
+      hsla(0 calc(var(--active) * 97%) 0% / var(--active), 100%),
+      transparent
+    ),
+    radial-gradient(
+      80% 100% at center 120%,
+      hsl(160 calc(var(--active) * 97%) 0% / var(--active)),
+      transparent
+    ),
+    hsl(160 calc(var(--active) * 97%) calc((var(--active) * 14%) + 12%));
+  background: var(--bg);
+  font-size: 2rem;
+  font-weight: 500;
+  border: 0;
+  cursor: pointer;
+  padding: 0.9em 1.3em;
+  display: flex;
+  align-items: center;
+  gap: 0.25em;
+  white-space: nowrap;
+  border-radius: 100px;
+  position: relative;
+  box-shadow:
+    0 0 calc(var(--active) * var(--shadow-size)) calc(var(--active) * var(--shadow-size) / 2) var(--shadow-color),
+    0 0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc((var(--active) * 50%) + 30%)) inset,
+    0 -0.05em 0 0 hsl(260 calc(var(--active) * 97%) calc(var(--active) * 60%)) inset;
+  transition: box-shadow var(--transition), scale var(--transition), background var(--transition);
+  scale: calc(1 + (var(--active) * 0.1));
+}
+
+button:active {
+  scale: 1;
+}
+
+svg {
+  overflow: visible !important;
+}
+
+.sparkle path {
+  color: hsl(0 0% calc((var(--active, 0) * 70%) + var(--base, 30%)));
+  transform-box: fill-box;
+  transform-origin: center;
+  fill: currentColor;
+  stroke: currentColor;
+  animation-delay: calc((var(--transition) * 1.5) + (var(--delay, 0.1) * 1s));
+  animation-duration: 0.6s;
+  transition: color var(--transition);
+}
+.sparkle:hover path {
+  color: var(--shadow-color);
+}
+button:is(:hover, :focus-visible) path {
+  animation-name: bounce;
+}
+
+@keyframes bounce {
+  35%, 65% {
+    scale: var(--scale, 1);
   }
-  button:is(:hover, :focus-visible) path {
-    animation-name: bounce;
+}
+
+.sparkle path:nth-of-type(1) {
+  --scale: 0.5;
+  --delay: 0.1;
+  --base: 40%;
+}
+
+.sparkle path:nth-of-type(2) {
+  --scale: 1.5;
+  --delay: 0.2;
+  --base: 20%;
+}
+
+.sparkle path:nth-of-type(3) {
+  --scale: 2.5;
+  --delay: 0.35;
+  --base: 30%;
+}
+
+button:before {
+  content: "";
+  position: absolute;
+  inset: -0.25em;
+  z-index: -1;
+  border: 0.25em solid var(--shadow-color);
+  border-radius: 100px;
+  opacity: var(--active, 0);
+  transition: opacity var(--transition);
+}
+
+.spark {
+  position: absolute;
+  inset: 0;
+  border-radius: 100px;
+  rotate: 0deg;
+  overflow: hidden;
+  mask: linear-gradient(white, transparent 50%);
+  animation: flip calc(var(--spark) * 2) infinite steps(2, end);
+}
+
+@keyframes flip {
+  to {
+    rotate: 360deg;
   }
-  
-  @keyframes bounce {
-    35%, 65% {
-      scale: var(--scale, 1);
-    }
+}
+
+.spark:before {
+  content: "";
+  position: absolute;
+  width: 200%;
+  aspect-ratio: 1;
+  top: 0%;
+  left: 50%;
+  z-index: -1;
+  translate: -50% -15%;
+  rotate: 0;
+  transform: rotate(-90deg);
+  opacity: calc((var(--active)) + 0.4);
+  background: conic-gradient(
+    from 0deg,
+    transparent 0 340deg,
+    white 360deg
+  );
+  transition: opacity var(--transition);
+  animation: rotate var(--spark) linear infinite both;
+}
+
+.spark:after {
+  content: "";
+  position: absolute;
+  inset: var(--cut);
+  border-radius: 100px;
+}
+
+.backdrop {
+  position: absolute;
+  inset: var(--cut);
+  background: var(--bg);
+  border-radius: 100px;
+  transition: background var(--transition);
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(90deg);
   }
-  
-  .sparkle path:nth-of-type(1) {
-    --scale: 0.5;
-    --delay: 0.1;
-    --base: 40%;
+}
+
+.bodydrop {
+  background: hsl(
+    260
+    calc(var(--active) * 97%)
+    6%
+  );
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+}
+
+.particle-pen {
+  position: absolute;
+  width: 200%;
+  aspect-ratio: 1;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  -webkit-mask: radial-gradient(white, transparent 65%);
+  z-index: -1;
+  opacity: var(--active, 0);
+  transition: opacity var(--transition);
+}
+
+.particle {
+  fill: white;
+  width: calc(var(--size, 0.25) * 1rem);
+  aspect-ratio: 1;
+  position: absolute;
+  top: calc(var(--y) * 1%);
+  left: calc(var(--x) * 1%);
+  opacity: var(--alpha, 1);
+  animation: float-out calc(var(--duration, 1) * 1s) calc(var(--delay) * -1s) infinite linear;
+  transform-origin: var(--origin-x, 1000%) var(--origin-y, 1000%);
+  z-index: -1;
+  animation-play-state: var(--play-state, paused);
+}
+
+.particle:nth-of-type(even) {
+  animation-direction: reverse;
+}
+
+@keyframes float-out {
+  to {
+    rotate: 360deg;
   }
-  
-  .sparkle path:nth-of-type(2) {
-    --scale: 1.5;
-    --delay: 0.2;
-    --base: 20%;
-  }
-  
-  .sparkle path:nth-of-type(3) {
-    --scale: 2.5;
-    --delay: 0.35;
-    --base: 30%;
-  }
-  
-  button:before {
-    content: "";
-    position: absolute;
-    inset: -0.25em;
-    z-index: -1;
-    border: 0.25em solid var(--Secondary);
-    border-radius: 100px;
-    opacity: var(--active, 0);
-    transition: opacity var(--transition);
-  }
-  
-  .spark {
-    position: absolute;
-    inset: 0;
-    border-radius: 100px;
-    rotate: 0deg;
-    overflow: hidden;
-    mask: linear-gradient(white, transparent 50%);
-    animation: flip calc(var(--spark) * 2) infinite steps(2, end);
-  }
-  
-  @keyframes flip {
-    to {
-      rotate: 360deg;
-    }
-  }
-  
-  .spark:before {
-    content: "";
-    position: absolute;
-    width: 200%;
-    aspect-ratio: 1;
-    top: 0%;
-    left: 50%;
-    z-index: -1;
-    translate: -50% -15%;
-    rotate: 0;
-    transform: rotate(-90deg);
-    opacity: calc((var(--active)) + 0.4);
-    background: conic-gradient(
-      from 0deg,
-      transparent 0 340deg,
-      white 360deg
-    );
-    transition: opacity var(--transition);
-    animation: rotate var(--spark) linear infinite both;
-  }
-  
-  .spark:after {
-    content: "";
-    position: absolute;
-    inset: var(--cut);
-    border-radius: 100px;
-  }
-  
-  .backdrop {
-    position: absolute;
-    inset: var(--cut);
-    background: var(--bg);
-    border-radius: 100px;
-    transition: background var(--transition);
-  }
-  
-  @keyframes rotate {
-    to {
-      transform: rotate(90deg);
-    }
-  }
-  
-  .bodydrop {
-    background: hsl(
-      260
-      calc(var(--active) * 97%)
-      6%
-    );
-    position: fixed;
-    inset: 0;
-    z-index: -1;
-  }
-  
-  .particle-pen {
-    position: absolute;
-    width: 200%;
-    aspect-ratio: 1;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
-    -webkit-mask: radial-gradient(white, transparent 65%);
-    z-index: -1;
-    opacity: var(--active, 0);
-    transition: opacity var(--transition);
-  }
-  
-  .particle {
-    fill: white;
-    width: calc(var(--size, 0.25) * 1rem);
-    aspect-ratio: 1;
-    position: absolute;
-    top: calc(var(--y) * 1%);
-    left: calc(var(--x) * 1%);
-    opacity: var(--alpha, 1);
-    animation: float-out calc(var(--duration, 1) * 1s) calc(var(--delay) * -1s) infinite linear;
-    transform-origin: var(--origin-x, 1000%) var(--origin-y, 1000%);
-    z-index: -1;
-    animation-play-state: var(--play-state, paused);
-  }
-  
-  .particle:nth-of-type(even) {
-    animation-direction: reverse;
-  }
-  
-  @keyframes float-out {
-    to {
-      rotate: 360deg;
-    }
-  }
-  
-  .text {
-    translate: 2% -6%;
-    letter-spacing: 0.01ch;
-    background: linear-gradient(90deg, hsl(0 0% calc((var(--active) * 100%) + 65%)), hsl(0 0% calc((var(--active) * 100%) + 26%)));
-    -webkit-background-clip: text;
-    color: transparent;
-    transition: background var(--transition);
-  }
-  
-  button svg {
-    inline-size: 1.25em;
-    translate: -25% -5%;
-  }
+}
+
+.text {
+  translate: 2% -6%;
+  letter-spacing: 0.01ch;
+  background: linear-gradient(90deg, hsl(0 0% calc((var(--active) * 100%) + 65%)), hsl(0 0% calc((var(--active) * 100%) + 26%)));
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: background var(--transition);
+}
+
+button svg {
+  inline-size: 1.25em;
+  translate: -25% -5%;
+}
+
+/* Hover state activation */
+button:hover,
+button:focus-visible {
+  --active: 1;
+}
+
+.particle-pen:has(+ button:hover) .particle {
+  --play-state: running;
+}
