--- a/src/components/Buttons/AnimatedIconButton/ButtonSparkle.css
+++ b/src/components/Buttons/AnimatedIconButton/ButtonSparkle.css
@@ -4,31 +4,31 @@
   --primary-color: hsl(260, 97%, 70%);
   --secondary-color: hsl(270, 97%, 72%);
   --button-bg-primary: hsl(270, 97%, 72%);    /* Colore primario del gradiente */
---button-bg-secondary: hsl(170, 97%, 70%);  /* Colore secondario del gradiente */
---button-bg-base: hsl(260, 97%, 12%);       /* Colore di sfondo base */
+--button-bg-secondary: hsl(0, 0%, 13%);  /* Colore secondario del gradiente */
+--button-bg-base: hsl(263, 36%, 4%);       /* Colore di sfondo base */
 --shadow-color: rgba(0, 255, 234, 0.877);     /* Colore dell'ombra */
---shadow-size: 40px;          
+--shadow-size: 20px;          
 }
 
 .sparkle-button {
   position: relative;
 }
 
-button {
+.button {
   --cut: 0.1em;
   --active: 0;
   --bg:
     radial-gradient(
       40% 50% at center 100%,
-      hsla(0 calc(var(--active) * 97%) 0% / var(--active), 100%),
+      hsla(0 calc(var(--active) * 0%) 15% / var(--active)),
       transparent
     ),
     radial-gradient(
       80% 100% at center 120%,
-      hsl(160 calc(var(--active) * 97%) 0% / var(--active)),
+      hsl(0 calc(var(--active) * 97%) 0% / var(--active)),
       transparent
     ),
-    hsl(160 calc(var(--active) * 97%) calc((var(--active) * 14%) + 12%));
+    hsl(0 calc(var(--active) * 0%) calc((var(--active) * 0%) + 12%));
   background: var(--bg);
   font-size: 2rem;
   font-weight: 500;
@@ -49,7 +49,7 @@ button {
   scale: calc(1 + (var(--active) * 0.1));
 }
 
-button:active {
+.button:active {
   scale: 1;
 }
 
@@ -98,7 +98,7 @@ button:is(:hover, :focus-visible) path {
   --base: 30%;
 }
 
-button:before {
+.button:before {
   content: "";
   position: absolute;
   inset: -0.25em;
@@ -224,8 +224,8 @@ button:before {
   transition: background var(--transition);
 }
 
-button svg {
-  inline-size: 1.25em;
+.button svg {
+  inline-size: calc(1.25em * var(--button-scale, 1));
   translate: -25% -5%;
 }
 
