--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,7 @@
 :root {
 
 /* Sfondo principale */
---Background: #0e0e0e;
+--Background: #000000;
 
 /* Colori principali */
 --Primary: rgba(46, 46, 46); 
@@ -45,17 +45,6 @@ body {
   background-color: var(--Background);
   overflow-x: hidden;
 }
-
-a {
-  margin-right: 1rem;
-}
-
-main {
-  text-align: center;
-  padding: 1em;
-  margin: 0 auto;
-}
-
 h1 {
   color: var(--TextPrimary);
   font-size: var(--FontXL);
