--- a/src/routes/(Pages)/LoginRegistration/index.module.scss
+++ b/src/routes/(Pages)/LoginRegistration/index.module.scss
@@ -7,3 +7,20 @@
 .hidden {
   animation: hiddenButton 1s forwards;
 }
+
+.titles{
+  font-size: 42px;
+  color:hsl(0, 0%, 71%);
+  &:hover{
+    color: hsl(0, 0%, 45%);
+    transition: all 1s ;
+  }
+}
+.paragraf{
+  font-size: 22px;
+  color:hsl(0, 0%, 71%);
+  &:hover{
+    color: hsl(0, 0%, 45%);
+    transition: all 1s ;
+  }
+}
