--- a/src/routes/(Pages)/LoginRegistration/Registration/Credentials/index.module.scss
+++ b/src/routes/(Pages)/LoginRegistration/Registration/Credentials/index.module.scss
@@ -1,7 +1,7 @@
 .formContainer{
   border: 2px solid hsl(0, 0%, 16%);
   border-radius: 30px;
-  min-height: 700px;
+  min-height: 10rem;
   height:max-content;
   padding-bottom: 30px;
   margin-bottom: 30px;
