--- a/src/routes/(Pages)/LoginRegistration/Registration/ProgressBar/index.module.scss
+++ b/src/routes/(Pages)/LoginRegistration/Registration/ProgressBar/index.module.scss
@@ -44,10 +44,12 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .Line {
-  margin-top: 75px;
+  margin-top: 80px;
   position: relative;
   background-color: var(--base-color-line);
   border-radius: 10px;
@@ -108,9 +110,12 @@
   z-index: 2;
   display: flex;
   flex-direction: row;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .Step {
+  
   width: var(--step-size);
   height: var(--step-size);
   background-color: var(--base-color-step);
