--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -2,3 +2,12 @@
   font-size: 70px;
   color: var(--Secondary)
 }
+
+.try{
+
+  height: 5rem;
+  max-width: 7rem;
+  width: clamp(1rem, 2.5vw, 3rem);
+  font-size-
+  /* Minimo, preferito, massimo */
+}
