--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -5,9 +5,7 @@
 
 .try{
 
-  height: 5rem;
-  max-width: 7rem;
-  width: clamp(1rem, 2.5vw, 3rem);
-  font-size-
-  /* Minimo, preferito, massimo */
+  width: 50%;
+  aspect-ratio: 9 / 10;
+
 }
