--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -1,11 +1,12 @@
 .logo{
-  font-size: 70px;
-  color: var(--Secondary)
+  font-size: 2vw;
+  color: var(--Secondary);
+  
 }
 
 .try{
 
   width: 50%;
-  aspect-ratio: 9 / 10;
+  aspect-ratio: 16 / 9;
 
 }
