--- a/src/app.css
+++ b/src/app.css
@@ -9,10 +9,9 @@
 
 
 :root {
-
+  /*scroll-behavior: smooth;*/
 /* Sfondo principale */
 --Background: #000000;
-
 /* Colori principali */
 --Primary: rgba(46, 46, 46); 
 --PrimaryOpacity80: rgba(46, 46, 46, 0.8); 
