--- a/src/routes/(Pages)/Wallets/_components/Card/Card.module.scss
+++ b/src/routes/(Pages)/Wallets/_components/Card/Card.module.scss
@@ -5,3 +5,13 @@ border-radius: 20px;
   transition: 0.3s ease-in-out;
 }
 }
+
+.name{
+  font-size: 1vw;
+  margin-top: 0.3vw;
+}
+
+.balance{
+  font-size: 1vw;
+  margin-top: 0.001vw;
+}
