--- a/src/components/Menus/Menu.scss
+++ b/src/components/Menus/Menu.scss
@@ -80,7 +80,7 @@
 }
 
 .Icon.Hover {
-  color: #00ffc8 !important;
+  color: var(--Secondary) !important;
   transition: all 0.3s ease;
   animation: pulseIcon 1.2s infinite;
   filter: drop-shadow(0 0 5px var(--Secondary));
